# 441_MP

./: .gitignore
ArthurLeywin_src/: Assignment03.cpp  Assignment03.hpp  CMakeLists.txt  Horse.cpp  Horse.hpp  main.cpp
ArthurLeywin_src/shaders/: lab05.v.glsl
ClutchNorris-a3/: A3Engine.hpp
Guild_MP/: A3Engine.cpp  A3Engine.hpp  ArcBall.cpp  ArcBall.h  Arthur.cpp  Arthur.hpp  CMakeLists.txt  Character.hpp  Clutch.cpp  Clutch.hpp  Light.hpp  Player.cpp  Player.hpp  README.txt  Saul.cpp  Saul.hpp  fpCam.cpp  fpCam.h  main.cpp
Guild_MP/models/: Arthur.mtl  Autodesk123DSculpt.mtl  WhenTheImposterIsSus.mtl  clutchnorris.mtl  saul.mtl  suscan.mtl
Guild_MP/shaders/: lab05.v.glsl  textureShader.f.glsl  textureShader.v.glsl
SaulGoodman_src/: ArcballCam.h  CMakeLists.txt  Lab04Engine.cpp  Lab04Engine.hpp  Player.cpp  Player.h  README.txt  main.cpp
SaulGoodman_src/models/: BreakingBad.mtl  Obamium.mtl  WhenTheImposterIsSus.mtl
SaulGoodman_src/shaders/: customShader.f.glsl  customShader.v.glsl  defaultShader.f.glsl  defaultShader.v.glsl
models/: Arthur.mtl
www/: SaulGoodman.html
